--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,webstorm,macos,linux,zsh,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,vim,webstorm,macos,linux,zsh,node
 
+index.py
+index.js
+example.txt
+
 ### Linux ###
 *~
 
