--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,5 @@ zsdoc/data
 !/tests/_output/.gitkeep
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,webstorm,macos,linux,zsh,node
+
+.pylintrc
